t+lo:[[ດັນ]] t-balance t+lo:[[ໄສ]] t+mn:[[түлхэх]] t+uz:[[turtmoq]] t+uz:[[itarmoq]] t+ky:[[түртүү]] t+ky:[[итерүү]] t+kk:[[итеру]] t+tg:[[тела додан]] ([[WT:EDIT|Assisted]]) <push#49476454>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -119,20 +119,24 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Indonesian: {{t+|id|dorong}}
 * Italian: {{t+|it|spingere}}
 * Japanese: {{t+|ja|押す|tr=[[おす]], osu}}
+* Kazakh: {{t+|kk|итеру}}
 * Khmer: {{t+|km|រុញ|tr=ruɲ|sc=Khmr}}
 * Korean: {{t+|ko|밀다}}
 * Kurdish:
 *: Sorani: {{t|ckb|پاڵ دان|sc=ku-Arab}}
+* Kyrgyz: {{t+|ky|түртүү}}, {{t+|ky|итерүү}}
 * Ladin: {{t|lld|sburdlé}}
+* Lao: {{t|lo|ດັນ}}, {{t|lo|ໄສ}}
 * Latgalian: {{t|ltg|gryust}}, {{t|ltg|stumt}}
-* Latin: {{t|la|pello}}
 {{trans-mid}}
+* Latin: {{t|la|pello}}
 * Latvian: {{t|lv|grūst}}
 * Low German:
 *: German Low German: {{t|nds-de|stoten}}
 * Macedonian: {{t|mk|турка|tr=túrka|sc=Cyrl}}, {{t|mk|бутка|tr=bútka|sc=Cyrl}}
 * Malay: {{t|ms|tolak}}
 * Maori: {{t|mi|kōpana}}
+* Mongolian: {{t+|mn|түлхэх}}
 * Neapolitan: {{t|nap|vottà}}
 * Norwegian: {{t|no|dytte}}, {{t|no|skubbe}}
 * Occitan: {{t+|oc|butar}}
@@ -155,11 +159,13 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Sundanese: {{t|su|sorong}}
 * Swahili: {{t|sw|kusukuma}}
 * Swedish: {{t|sv|skjuta på}}
+* Tajik: {{t|tg|тела додан}}
 * Telugu: {{t+|te|నెట్టు|sc=Telu}}, {{t+|te|తోయు|sc=Telu}}
 * Thai: {{t+|th|ดัน}}, {{t+|th|กด}}, {{t+|th|ผลัก}}
 * Turkish: {{t+|tr|itmek}}
 * Ukrainian: {{t|uk|штовхати|impf|tr=štovxáty|sc=Cyrl}}
 * Urdu: {{t|ur|دھکیلنا|tr=dhakelnā|sc=ur-Arab}}
+* Uzbek: {{t+|uz|turtmoq}}, {{t+|uz|itarmoq}}
 * Venetian: {{t+|vec|pender}}, {{t+|vec|spender}}
 * Vietnamese: {{t+|vi|xô}}, {{t+|vi|đẩy}}
 * Waray-Waray: {{t|war|ig-tulang}}, {{t|war|gin-tulang}}, {{t|war|i-duso}}, {{t|war|ig-duso}}
