--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -145,7 +145,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 *: Cyrillic: {{t|cu|Їздраил҄ь|m|sc=Cyrs}}
 * Oriya: {{t|or|ଇସ୍ରାଏଲ|tr=isrā'ēl|sc=Orya}}
 * Ossetian: {{t|os|Израиль|sc=Cyrl}}
-* Pashto: {{t|ps|اسرايل|tr=isrāyīl|sc=ps-Arab}}
+* Pashto: {{t|ps|اسرايل|tr=isrāyīl|sc=ps-Arab}}, {{t+|ps|اسراييل|m|tr=esrāíl}}
 * Persian: {{t+|fa|اسرائیل|tr=esrâ’il}}
 * Polish: {{t+|pl|Izrael|m-in}}
 * Portuguese: {{t+|pt|Israel}}
