t+wuu:[[以色列]] t-balance t+as:[[ইজৰাইল]] t+vi:[[I-xra-en]] ([[WT:EDIT|Assisted]]) <Israel#49493470>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -65,6 +65,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Aramaic:
 *: Assyrian Neo-Aramaic: {{t|aii|ܐܝܣܪܐܝܠ|sc=Syrc}}
 * Armenian: {{t+|hy|Իսրայել}}
+* Assamese: {{t|as|ইজৰাইল}}
 * Assyrian Neo-Aramaic: {{t|aii|ܐܝܣܪܐܝܠ|sc=Syrc}}
 * Asturian: {{t+|ast|Israel}}
 * Azerbaijani: {{t+|az|İsrail}}
@@ -83,6 +84,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 *: Mandarin: {{t+|cmn|以色列|tr=Yǐsèliè|sc=Hani}}
 *: Min Dong: {{t|cdo|以色列|tr=Ī-sáik-liĕk|sc=Hani}}
 *: Min Nan: {{t|nan|以色列|tr=Í-sek-lia̍t|sc=Hani}}
+*: Wu: {{t|wuu|以色列|tr=i seq liq}}
 * Chuvash: {{t|cv|Израиль|sc=Cyrl}}
 * Czech: {{t+|cs|Izrael}}
 * Danish: {{t+|da|Israel}}
@@ -118,8 +120,8 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Khmer: {{t+|km|អ៊ីស្រាអែល}}
 * Kikuyu: {{t|ki|Israel}}
 * Korean: {{t|ko|^이스라엘}}
-* Krymchak: {{t|jct|Исраэль}}
 {{trans-mid}}
+* Krymchak: {{t|jct|Исраэль}}
 * Kyrgyz: {{t+|ky|Израиль|sc=Cyrl}}
 * Lao: {{t|lo|ອິດສະລະແອນ|sc=Laoo}}
 * Latin: {{t|la|Israel}}
@@ -177,7 +179,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Uyghur: {{t|ug|ئىسرائىلىيە|sc=ug-Arab}}
 * Uzbek: {{t+|uz|Isroil}}
 * Veps: {{t|vep|Izrail'}}
-* Vietnamese: {{t+|vi|Israel}}, {{t|vi|Ixraen}}
+* Vietnamese: {{t+|vi|Israel}}, {{t|vi|Ixraen}}, {{t|vi|I-xra-en}}
 * Volapük: {{t|vo|Yisraelän}}
 * Yiddish: {{t|yi|ישׂראל|n|tr=yisroel}}
 * Yoruba: {{t|yo|Iserẹli}}
