--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -120,8 +120,8 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Khmer: {{t+|km|អ៊ីស្រាអែល}}
 * Kikuyu: {{t|ki|Israel}}
 * Korean: {{t|ko|^이스라엘}}
-{{trans-mid}}
 * Krymchak: {{t|jct|Исраэль}}
+{{trans-mid}}
 * Kyrgyz: {{t+|ky|Израиль|sc=Cyrl}}
 * Lao: {{t|lo|ອິດສະລະແອນ|sc=Laoo}}
 * Latin: {{t|la|Israel}}
@@ -151,6 +151,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Persian: {{t+|fa|اسرائیل|tr=esrâ’il}}
 * Polish: {{t+|pl|Izrael|m-in}}
 * Portuguese: {{t+|pt|Israel}}
+* Punjabi: {{t+|pa|ਇਜ਼ਰਾਇਲ}}
 * Romanian: {{t+|ro|Israel|n}}
 * Russian: {{t+|ru|Изра́иль|m}}
 * Samogitian: {{t|sgs|Izraelės|m}}, {{t|sgs|Izraele Valstībė|f}}
@@ -162,6 +163,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Sinhalese: {{t|si|ඊශ්‍රායෙලය|sc=Sinh}}
 * Slovak: {{t+|sk|Izrael|m}}
 * Slovene: {{t+|sl|Ízrael|m}}
+* Somali: {{t|so|Israaiil}}
 * Spanish: {{t+|es|Israel|m}}
 * Swahili: {{t+|sw|Israeli}}
 * Swedish: {{t+|sv|Israel}}
