--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -59,7 +59,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 ====Translations====
 {{trans-top|id=Q801|the state}}
 * Adyghe: {{t|ady|Исраил}}
-* Albanian: {{t|sq|Izrael}}
+* Albanian: {{t|sq|Izrael|m}}
 * Amharic: {{t|am|እስራኤል|sc=Ethi}}
 * Arabic: {{t+|ar|إِسْرَائِيل|f}}
 * Aramaic:
