--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -121,6 +121,8 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Kikuyu: {{t|ki|Israel}}
 * Korean: {{t|ko|^이스라엘}}
 * Krymchak: {{t|jct|Исраэль}}
+* Kurdish:
+*: Kurmanji: {{t|ku|Îsraêl}}
 {{trans-mid}}
 * Kyrgyz: {{t+|ky|Израиль|sc=Cyrl}}
 * Lao: {{t|lo|ອິດສະລະແອນ|sc=Laoo}}
