--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -207,7 +207,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Burmese: {{t+|my|ထောပတ်|sc=Mymr}}
 * Buryat: {{t|bua|сагаан тоһон}}
 * Catalan: {{t|ca|mantega|f}}
-* Cherokee: {{t|chr|ᎪᏢᏅ|tr=go⁠tlv⁠nv|sc=Cher}}
+* Cherokee: {{t|chr|ᎪᏢᏅ}}
 * Cheyenne: {{t|chy|heóveamėške}}
 * Chinese:
 *: Cantonese: {{t|yue|牛油|tr=ngau4 jau4|sc=Hani}}
@@ -239,7 +239,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 *: Ancient Greek: {{t|grc|βούτυρον|n}}
 *: Cappadocian Greek: {{t|cpg|καράκι}}
 * Greenlandic: {{t|kl|punneq}}
-* Gujarati: {{t+|gu|માખણ|n|tr=mākhaṇa}}, {{t|gu|મસ્કો|tr=maskō}}
+* Gujarati: {{t+|gu|માખણ|n}}, {{t|gu|મસ્કો}}
 * Haitian Creole: {{t|ht|bè}}
 * Hausa: {{t|ha|man shanu}}
 * Hawaiian: {{t|haw|waiūpaka}}
@@ -259,7 +259,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Javanese: {{t|jv|mertéga}}
 * Kannada: {{t+|kn|ಬೆಣ್ಣೆ}}
 * Kazakh: {{t|kk|май}}, {{t|kk|сармай}}, {{t|kk|сары май}}
-* Khmer: {{t|km|បឺរ|tr=bər|sc=Khmr}}, {{t|km|ខ្លាញ់ទឹកដោះ|tr=klañ tɨk dɑh|sc=Khmr}}
+* Khmer: {{t|km|បឺរ}}, {{t|km|ខ្លាញ់ទឹកដោះ}}
 * Korean: {{t+|ko|버터}}
 * Kurdish:
 *: Sorani: {{t+|ku|که‌ره‌|sc=ku-Arab}}
@@ -352,7 +352,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Ukrainian: {{t|uk|ма́сло|n}}
 * Urdu: {{t|ur|گھی|tr=ghī}}, {{t|ur|مکھن|tr=makkhan}}
 * Uyghur: {{t|ug|سېرىق ماي}}
-* Uzbek: {{t+|uz|saryog`}}
+* Uzbek: {{t+|uz|saryogʻ}}
 * Venetian: {{t+|vec|butiro|m}}, {{t|vec|botiro|m}}
 * Vietnamese: {{t+|vi|bơ}}
 * Vilamovian: {{t|wym|putter|f}}
