--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -229,7 +229,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Uyghur: {{t|ug|خىش}}
 * Uzbek: {{t+|uz|gʻisht}}
 * Venetian: {{t|vec|quareło|m}}
-* Vietnamese: {{t+|vi|gạch}}, {{t|vi|gạch nung}}, {{t|vi|gạch đỏ}}
+* Vietnamese: {{t+|vi|gạch}}
 * Vilamovian: {{t|wym|cigl|m}}
 * Volapük: {{t+|vo|bakaston}}
 * Walloon: {{t|wa|brike}}
