--- a/en/昂/昂.16938.wikitext
+++ b/en/昂/昂.16938.wikitext
@@ -88,7 +88,7 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-readings|rs=日04|hanviet=[[ngang]], [[ngáng]], [[ngàng]], [[ngãng]]}}
+{{vi-hantu|rs=日04|[[ngang]], [[ngáng]], [[ngàng]], [[ngãng]]}}
 
 # {{defn|lang=vi|sort=日04}}
 
