--- a/en/昂/昂.16938.wikitext
+++ b/en/昂/昂.16938.wikitext
@@ -5,15 +5,11 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=60127|canj=AHVL|ids=⿱日卬}}
 
-# [[rise]], [[raise]]
-# [[proud]], [[bold]]
-# [[upright]]
-
 ====Derived characters====
 * {{l|mul|[[㭿]], [[𠵫]], [[𢯤]], [[𩜟]], [[𪸺]]}}
 
 ====References====
-* {{Han ref|kx=0490.330|dkj=13783|dj=0851.320|hdz=21495.030|uh=6602|ud=26114|bh=A9F9|bd=43513}}
+{{Han ref|kx=0490.330|dkj=13783|dj=0851.320|hdz=21495.030|uh=6602}}
 
 ----
 
