--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -2,7 +2,7 @@
 {{character info/new}}
 {{character info/new|0x2f809}}
 ==Translingual==
-{{ja-forms|備|[[备]]|備}}
+{{CJKV-forms|備|备|備|備}}
 
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=24227|canj=OTHB|ids=⿰亻𤰇 <small>(GT)</small>,⿰亻⿱卄⿸厂用 <small>(JK)</small>}}
