--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -43,6 +43,8 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 # {{lb|en|countable}} A [[fragment]] of [[music]] or [[poetry]]. {{jump|fragment of music|s}}
 #* {{quote-book|1852|Mrs M.A. Thompson|chapter=The Tutor's Daughter|Graham's American Monthly Magazine of Literature, Art, and Fashion|page=266|url=http://books.google.com/books?id=hdcRAAAAYAAJ
 |passage=In the lightness of my heart I sang '''catches''' of songs as my horse gayly bore me along the well-remembered road.}}
+#* '''1872''', Harriet Martineau, ''Deerbrook'' (page 90)
+#*: "'Fair Enslaver!'" cried Mr. Enderby. "You must know 'Fair Enslaver:' there is not a sweeter '''catch''' than that. Come, Miss Ibbotson, begin; your sister will follow, and I&mdash;"<br>But it so happened that Miss Ibbotson had never heard 'Fair Enslaver.'
 # {{lb|en|obsolete}} A state of [[readiness]] to capture or seize; an [[ambush]].
 #* {{quote-book|1678|[[w:John Bunyan|John Bunyan]]|The Pilgrim's Progress|section=[[wikisource:The Pilgrim's Progress/Part I/Section 3|Part I Section 3]]
 |passage=You lie at the '''catch''' again: this is not for edification.}}
