t+bo:[[གནད]] ([[WT:EDIT|Assisted]]) <cost#49510655>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -111,7 +111,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Swahili: {{t+|sw|gharimu}}
 * Swedish: {{t+|sv|kosta|c}}
 * Thai: {{t+|th|ราคา}}
-* Tibetan: {{t-needed|bo}}
+* Tibetan: {{t|bo|གནད}}
 * Turkish: {{t|tr|fiyatı olmak}}
 * Tuvan: {{t-needed|tyv}}
 * Ukrainian: {{t|uk|ко́штувати|impf|sc=Cyrl}}
