/* Derived terms */ <cut#49513358>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -36,7 +36,13 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 * {{l|en|snithe}}
 
 ====Derived terms====
-{{der2|lang=en|clear-cut|offcut|point-cut}}
+{{der2|lang=en
+|clear-cut
+|Cut Bank
+|cutbank
+|offcut
+|point-cut
+}}
 
 ====Related terms====
 {{rel2|lang=en|title=Terms related to ''cut'' (adjective)|cut and dried|mad as a cut snake}}
