--- a/en/圿/圿.12994.wikitext
+++ b/en/圿/圿.12994.wikitext
@@ -9,12 +9,19 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[git3]]|y=git3}}
+===Pronunciation===
+{{zh-pron
+|m=jiá
+|c=git3
+}}
 
-# {{defn|lang=yue|sort=土04}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
@@ -29,13 +36,4 @@
 # {{defn|lang=ja|sort=土04}}
 
 ====Readings====
-* {{ja-readings|on=[[かつ]] (katsu), [[けち]] (kechi)|kun=[[あか]] (aka), [[ちり]] (chiri)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jiá]] ([[jia2]]), [[xùn]] ([[xun4]])|wg=chia<sup>2</sup>, hsün<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
+* {{ja-readings|on=かつ, けち|kun=}}
