--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -1,5 +1,4 @@
 ==English==
-{{wikipedia}}
 [[Image:Aldabra.giant.tortoise.arp.jpg|thumb|A tortoise]]
 
 ===Etymology===
@@ -16,9 +15,14 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 {{en-noun}}
 
 # Any of various land-dwelling [[reptile]]s, of [[family]] [[Testudinidae]], whose body is enclosed in a [[shell]] ([[carapace]] plus [[plastron]]). The animal can [[withdraw]] its head and four legs partially into the shell, providing some [[protection]] from [[predator]]s.
+#: {{syn|en|shellpad}}
 
-====Synonyms====
-* {{l|en|shellpad}}
+====Usage notes====
+Differences exist in usage of the common terms {{m|en|turtle}}, {{m|en|tortoise}}, and {{m|en|terrapin}}, depending on the variety of English being used. In American usage, {{m|en|turtle}} is often a general term; {{m|en|tortoise}} is used only in reference to terrestrial turtles or, more narrowly, only those members of {{m|mul|Testudinidae}}, the family of modern land tortoises; and {{m|en|terrapin}} may refer to turtles that are small and live in fresh and brackish water.
+
+British usage, by contrast, tends not to use {{m|en|turtle}} as a generic term for all members of the order, and also applies the term {{m|en|tortoise|tortoises}} broadly to all land-dwelling members of the order {{m|mul|Testudines}}, regardless of whether they are actually members of the family {{m|mul|Testudinidae}}.
+
+Land tortoises are not native to Australia, yet traditionally freshwater turtles have been called {{m|en|tortoise|tortoises}} in Australia.
 
 ====Derived terms====
 * {{l|en|tortoise shell}}, {{l|en|tortoise-shell}}, {{l|en|pancake tortoise}}
@@ -146,5 +150,8 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 ===See also===
 * {{l|en|terrapin}}
 * {{l|en|turtle}}
+
+===Further reading===
+* {{pedia}}
 
 [[Category:en:Turtles]]
