--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -15,7 +15,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 {{en-noun}}
 
 # Any of various land-dwelling [[reptile]]s, of [[family]] [[Testudinidae]], whose body is enclosed in a [[shell]] ([[carapace]] plus [[plastron]]). The animal can [[withdraw]] its head and four legs partially into the shell, providing some [[protection]] from [[predator]]s.
-#: {{syn|en|shellpad}}
+#: {{syn|en|shellpad|q=obsolete}}
 
 ====Usage notes====
 Differences exist in usage of the common terms {{m|en|turtle}}, {{m|en|tortoise}}, and {{m|en|terrapin}}, depending on the variety of English being used. In American usage, {{m|en|turtle}} is often a general term; {{m|en|tortoise}} is used only in reference to terrestrial turtles or, more narrowly, only those members of {{m|mul|Testudinidae}}, the family of modern land tortoises; and {{m|en|terrapin}} may refer to turtles that are small and live in fresh and brackish water.
