t+ur:[[کھیل]] t+ug:[[ئوينىماق]] t+bo:[[རྩེད་མོ་རྩེ]] t-balance t+ug:[[ئويۇن]] t+bo:[[རྩེད་མོ]] t+cmn:[[玩耍]] ([[WT:EDIT|Assisted]]) <play#49514937>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -120,7 +120,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Catalan: {{t+|ca|jugar}}
 * Chinese:
 *: Cantonese: {{t|yue|玩|tr=waan2|sc=Hani}}
-*: Mandarin: {{t+|cmn|玩|tr=wán|sc=Hani}}, {{t+|cmn|玩兒|sc=Hani}}, {{t+|cmn|玩儿|tr=wánr|sc=Hani}}
+*: Mandarin: {{t+|cmn|玩|tr=wán|sc=Hani}}, {{t+|cmn|玩兒|sc=Hani}}, {{t+|cmn|玩儿|tr=wánr|sc=Hani}}, {{t+|cmn|玩耍|tr=wánshuǎ}}
 * Chukchi: {{t|ckt|увичвэтык}}
 * Corsican: {{t+|co|ghjucà}}
 * Czech: {{t+|cs|hrát|impf}}
@@ -159,8 +159,8 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Latin: {{t|la|lūdō}}
 * Latvian: {{t|lv|spēlēt}}
 * Ligurian: {{t|lij|zugâ}}
-{{trans-mid}}
 * Lingala: {{t|ln|kosakana}}
+{{trans-mid}}
 * Lithuanian: {{t+|lt|žaisti}}
 * Low German:
 *: German Low German: {{t|nds-de|spelen}}
@@ -205,11 +205,13 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Tajik: {{t|tg|бозӣ кардан}}
 * Telugu: {{t+|te|ఆడు}}
 * Thai: {{t+|th|เล่น}}
+* Tibetan: {{t|bo|རྩེད་མོ་རྩེ}}
 * Tok Pisin: {{t|tpi|pilai}}
 * Turkish: {{t+|tr|oynamak}}
 * Turkmen: {{t|tk|oýnamak}}
 * Ukrainian: {{t+|uk|гра́ти|impf}}, {{t|uk|грáтися|impf}}, {{t|uk|бáвитися|impf}}
 * Urdu: {{t|ur|کھیلنا|tr=khelnā|sc=ur-Arab}}
+* Uyghur: {{t|ug|ئوينىماق}}
 * Uzbek: {{t+|uz|oʻynamoq}}
 * Venetian: {{t+|vec|xugar}}, {{t|vec|zugar}}, {{t|vec|xogar}}, {{t+|vec|zogar}}
 * Vietnamese: {{t+|vi|chơi}}
@@ -527,9 +529,9 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Latgalian: {{t|ltg|kaita|f}}
 * Latin: {{t|la|ludus|m}}
 * Latvian: {{t+|lv|spēle|f}}, {{t|lv|rotaļa|f}}
-{{trans-mid}}
 * Lithuanian: {{t|lt|žaidimas|m}}
 * Macedonian: {{t|mk|игра|f}}
+{{trans-mid}}
 * Malayalam: {{t+|ml|കളി}}
 * Mongolian: {{t+|mn|тоглоом}}
 * Norwegian:
@@ -555,9 +557,12 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Tagalog: {{t|tl|laro}}
 * Tajik: {{t+|tg|бозӣ}}
 * Thai: {{t+|th|การเล่น}}
+* Tibetan: {{t|bo|རྩེད་མོ}}
 * Turkish: {{t+|tr|oyun}}
 * Turkmen: {{t|tk|oýun}}
 * Ukrainian: {{t+|uk|гра|f|sc=Cyrl}}
+* Urdu: {{t|ur|کھیل|m|tr=khel}}
+* Uyghur: {{t|ug|ئويۇن}}
 * Uzbek: {{t+|uz|oʻyin}}
 * Vietnamese: {{t+|vi|chơi}}
 * Welsh: {{t+|cy|gêm|f}}
