t+ang:[[spilian]] ([[WT:EDIT|Assisted]]) <play#49514974>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -178,7 +178,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|играти|impf}}
 * Old East Slavic: {{t|orv|играти|impf}}
-* Old English: {{t|ang|lācan}}, {{t|ang|gamenian}}, {{t|ang|plegan}}
+* Old English: {{t|ang|lācan}}, {{t|ang|gamenian}}, {{t|ang|plegan}}, {{t|ang|spilian}}
 * Pashto: {{t|ps|لوبې كول|tr=lobe kawəl|sc=ps-Arab}}, {{t|ps|لوبول|tr=lobawəl|sc=ps-Arab}}
 * Persian: {{t+|fa|بازی کردن|tr=bâzi kardan|sc=fa-Arab}}
 * Polish: {{t+|pl|grać|impf}}, {{t+|pl|bawić się|impf}}
