--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -45,7 +45,7 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 * Georgian: {{t|ka|ესე იგი}}, {{t|ka|ე.ი.}}
 * German: {{t+|de|d. i.}} (pl. {{t|de|d. s.}}), {{t+|de|d. h.}}
 * Greek: {{t+|el|δηλ.}}, {{t+|el|δηλαδή}}
-* Hebrew: {{t|he|דהיינו|tr=deháinu}}, {{t|he|כלומר|tr=klomár}}, {{t|he|זאת אומרת|tr=zót oméret}}
+* Hebrew: {{t|he|דהיינו|tr=deháinu}}, {{t|he|כלומר|tr=klomár}}, {{t|he|זאת אומרת|tr=zót oméret}}, {{t+|he|קְרִי|tr=qri}}
 * Hungarian: {{t+|hu|azaz}}, {{t+|hu|ill.}}
 * Icelandic: {{t+|is|þ.e.}} <!-- [[það]] [[er]] -->, {{t+|is|þ.e.a.s.}} <!-- [[það]] [[er]] [[að]] [[segja]] -->
 * Ido: {{t+|io|t.e.}}
