--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -336,6 +336,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * French: {{t+|fr|tout droit}}
 * German: {{t+|de|geradeaus}}
 * Hebrew: {{t+|he|יָשָׁר|tr=yashár}}
+* Italian: {{t+|it|direttamente}}
 * Japanese: {{t|ja|真っすぐに|tr=massugu ni}}
 * Macedonian: {{t|mk|право|tr=právo}}
 {{trans-mid}}
