t+is:[[smyrja]] ([[WT:EDIT|Assisted]]) <butter#49515670>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -413,6 +413,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Faroese: {{t|fo|smyrja}}
 * French: {{t+|fr|beurrer}}
 * German: {{l|de|mit}} {{t+|de|Butter}} {{t+|de|bestreichen}}
+* Icelandic: {{t|is|smyrja}}
 * Ido: {{t+|io|butrizar}}
 * Interlingua: {{t|ia|butyrar}}
 {{trans-mid}}
