t+yua:[[báaxal]] ([[WT:EDIT|Assisted]]) <play#49518914>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -218,6 +218,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Vietnamese: {{t+|vi|chơi}}
 * Welsh: {{t+|cy|chwarae}}
 * Yiddish: {{t|yi|שפּילן}}
+* Yucatec Maya: {{t|yua|báaxal}}
 {{trans-bottom}}
 
 {{trans-top|produce music using a musical instrument (transitive sense), affecting a noun}}
