--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -23,7 +23,6 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 
 ====Verb====
 {{en-verb|comes|coming|came|come|past2=come|past2_qual=archaic|past_ptc2=comen|past_ptc2_qual=rare}}
-{{en-conj|come|came|come|coming|comes}}
 
 # {{lb|en|intransitive}} To [[move]] from further [[away]] to [[near]]er to.
 #: {{ux|en|She’ll be '''coming''' ’round the mountain when she '''comes'''{{...}}}}
@@ -97,6 +96,9 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 ##: {{ux|en|She '''comes''' from a good family.}}
 ##: {{ux|en|He '''comes''' from a disreputable legal firm.}}
 # {{lb|en|intransitive|of ''grain''}} To germinate.
+
+=====Conjugation=====
+{{en-conj|come|came|come|coming|comes}}
 
 =====Usage notes=====
 In its general sense, ''come'' specifically marks motion {{l|en|towards}} the [[w:Deixis|deictic]] centre, (whether explicitly stated or not). Its counterpart, usually referring to motion away from or not involving the deictic centre, is {{m|en|go}}. For example, the sentence "Come to the tree" implies contextually that the speaker is already at the tree — "Go to the tree" often implies that the speaker is elsewhere. Either the speaker or the listener can be the deictic centre — the sentences "I will go to you" and "I will come to you" are both valid, depending on the exact nuances of the context. When there is no clear speaker or listener, the deictic centre is usually the focus of the sentence or the topic of the piece of writing. "Millions of people '''came''' to America from Europe" would be used in an article about America, but "Millions of people '''went''' to America from Europe" would be used in an article about Europe.
