--- a/en/愚/愚.15662.wikitext
+++ b/en/愚/愚.15662.wikitext
@@ -4,8 +4,11 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=60332|canj=WBP|ids=⿱禺心}}
 
+====Derived characters====
+* {{l|mul|[[𠏋]], [[㦙]], [[𦔧]], [[𡪾]], [[𦽳]]}}
+
 ====References====
-* {{Han ref|kx=0395.120|dkj=10946|hdz=42321.070|uh=611A|ud=24858|bh=B74D|bd=46925}}
+{{Han ref|kx=0395.120|dkj=10946|hdz=42321.070|uh=611A}}
 
 ----
 
