--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -337,7 +337,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Assamese: {{t+|as|ভাওনা কৰা}}
 * Catalan: {{t+|ca|actuar}}
 * Chinese:
-*: Mandarin: {{t+check|cmn|表演|tr=biǎoyǎn|sc=Hani}}
+*: Mandarin: {{t+|cmn|表演|tr=biǎoyǎn|sc=Hani}}
 * Czech: {{t+|cs|hrát}}
 * Dutch: {{t+|nl|optreden}}
 * Esperanto: {{t|eo|roli}}
@@ -346,7 +346,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Galician: {{t+|gl|actuar}}
 * German: {{t+|de|spielen}}
 * Greek: {{t+|el|παίζω}}
-* Hebrew: {{t+|he|שיחק|tr=sikhék}}
+* Hebrew: {{t+|he|שיחק|tr=sikhék|alt=שיחק \ שִׂחֵק}}
 * Hungarian: {{t+|hu|játszik}}
 * Icelandic: {{t+|is|leika}}
 * Ido: {{t+|io|plear}}
