--- a/en/坼/坼.13055.wikitext
+++ b/en/坼/坼.13055.wikitext
@@ -12,12 +12,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[caak3]]|y=chaak3}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土05}}
+===Pronunciation===
+{{zh-pron
+|m=chè
+|c=caak3
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ----
 
@@ -42,15 +55,6 @@
 
 # [[split]]
 # [[open]]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chè]] ([[che4]]), [[la]] ([[la5]])|wg=ch'e<sup>4</sup>, la<sup>5</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 ----
 
