--- a/en/坤/坤.13031.wikitext
+++ b/en/坤/坤.13031.wikitext
@@ -68,6 +68,8 @@
 |kanon=こん
 |kun=[[つち]] (tsuchi), [[ひつじさる]] (hitsujisaru)}}
 
+===Etymology===
+{{compound|ja|未|tr1=hitsuji|申|tr2=saru}}
 ===Noun===
 {{ja-noun|ひつじさる}}
 
