--- a/en/坺/坺.13053.wikitext
+++ b/en/坺/坺.13053.wikitext
@@ -35,10 +35,9 @@
 |x=
 |mc=y
 |oc=y
-|cat=n
+|cat=c
 }}
 
-{{attention|yue|Cantonese pronunciation 'pet6' not found in the entry 坺.}}
 ===Definitions===
 {{zh-hanzi}}
 
