--- a/en/惟/惟.15604.wikitext
+++ b/en/惟/惟.15604.wikitext
@@ -18,7 +18,18 @@
 ===Pronunciation===
 {{zh-pron
 |m=wéi
+|m-s=
 |c=wai4
+|c-t=
+|g=
+|h=pfs=
+|j=
+|mb=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
 |mc=y
 |oc=y
 |cat=prep,adv,con,a
