--- a/en/惹/惹.15629.wikitext
+++ b/en/惹/惹.15629.wikitext
@@ -20,10 +20,18 @@
 ===Pronunciation===
 {{zh-pron
 |m=rě
+|m-s=
 |c=je5
+|c-t=
+|g=
 |h=pfs=ngiâ
+|j=
+|mb=niǎ
+|md=
 |mn=qz,tp,xm:liá/kh,zz:jiá
+|mn-t=ria2
 |w=
+|x=
 |mc=y
 |oc=y
 |ma=Zh-re.ogg
