--- a/en/愁/愁.15637.wikitext
+++ b/en/愁/愁.15637.wikitext
@@ -18,12 +18,19 @@
 ===Pronunciation===
 {{zh-pron
 |m=chóu
+|m-s=
 |c=sau4
+|c-t=
+|g=
 |h=pfs=sèu
+|j=
+|mb=chě
 |md=
 |mn=chhiû/qz,xm,zz:chhô͘
 |mn_note=chhiû - vernacular; chhô͘ - literary
+|mn-t=cou5
 |w=
+|x=
 |mc=y
 |oc=y
 |ma=y
