--- a/en/慘/慘.15724.wikitext
+++ b/en/慘/慘.15724.wikitext
@@ -19,11 +19,18 @@
 ===Pronunciation===
 {{zh-pron
 |m=cǎn
+|m-s=
 |c=caam2
 |c-t=tam2
+|g=
 |h=pfs=chhám
+|j=
+|mb=chǎng
+|md=
 |mn=chhám
 |mn-t=cam2
+|w=
+|x=
 |mc=y
 |oc=y
 |ma=
@@ -53,8 +60,10 @@
 
 ====Readings====
 {{ja-readings
-|on=さん, ざん
-|kun=みじ-め
+|goon=そん
+|kanon=さん
+|kanyoon=ざん
+|kun=みじ-め, いた-む
 }}
 
 ----
