--- a/en/垠/垠.13092.wikitext
+++ b/en/垠/垠.13092.wikitext
@@ -21,8 +21,18 @@
 ===Pronunciation===
 {{zh-pron
 |m=yín
+|m-s=
 |c=ngan4
+|c-t=
+|g=
+|h=pfs=
+|j=
+|mb=
+|md=
 |mn=gûn
+|mn-t=
+|w=
+|x=
 |mc=y
 |oc=y
 |ma=
@@ -32,10 +42,10 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# {{rfdef|zh}}
 
 ===Compounds===
-{{zh-der|無垠}}
+{{zh-der|八垠|無垠|絕垠|邊垠}}
 
 ----
 
@@ -48,14 +58,17 @@
 # [[boundary]]
 
 ====Readings====
-* {{ja-readings|on=[[ぎん]] (gin), [[ごん]] (gon)|kun=[[さかい]] (sakai), [[きし]] (kishi)}}
+{{ja-readings
+|goon=ごん
+|kanon=ぎん
+|kun=さか-い, きし-}}
 
 ----
 
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=은|rv=eun|mr=ŭn}}
+{{ko-hanja|hangeul=은}}
 
 # [[boundary]]
 # [[bank]] of [[stream]] or [[river]]
