--- a/en/圻/圻.12990.wikitext
+++ b/en/圻/圻.12990.wikitext
@@ -22,7 +22,18 @@
 ===Pronunciation===
 {{zh-pron
 |m=qí,yín
+|m-s=
 |c=kei4,ngan4
+|c-t=
+|g=
+|h=pfs=
+|j=
+|mb=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
 |mc=y
 |oc=y
 |ma=
@@ -32,7 +43,10 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# {{rfdef|zh}}
+
+===Compounds===
+{{zh-der|中圻|八圻|封圻}}
 
 ----
 
@@ -44,14 +58,17 @@
 # {{defn|lang=ja|sort=土04}}
 
 ====Readings====
-* {{ja-readings|on=[[き]] (ki), [[ぎん]] (gin)|kun=[[さかい]] (sakai)}}
+{{ja-readings
+|goon=げ, ごん
+|kanon=き, ぎん
+|kun=さか-い}}
 
 ----
 
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=[[기]], [[은]]|rv=gi, eun|mr=ki, ŭn}}
+{{ko-hanja|hangeul=[[기]], [[은]]}}
 
 # {{defn|lang=ko|sort=土04}}
 
@@ -60,6 +77,6 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-readings|rs=土04|hanviet=[[kì]], [[kỳ]]}}
+{{vi-hantu|rs=土04|[[kì]], [[kỳ]]}}
 
 # {{defn|lang=vi|sort=土04}}
