t+bo:[[རོལ་ཆ་བཏང]] t-balance ([[WT:EDIT|Assisted]]) <play#49560351>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -299,9 +299,9 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Icelandic: {{t|is|spila}}
 * Ido: {{t|io|pleigar}}
 * Indonesian: {{t+|id|bermusik}}
+{{trans-mid}}
 * Japanese: {{t+|ja|演奏|tr=えんそうする, ensō suru|alt=演奏する}}
 * Javanese: {{t|jv|nggitar}} {{qualifier|for guitar}}, {{t|jv|nggamel}} {{qualifier|gamelan}}, {{t+|jv|nggambang}} {{qualifier|gambang}}, {{t+|jv|nyuling}} {{qualifier|flute instruments}}, {{t|jv|nggendhang}} {{qualifier|gendhang}}, {{t|jv|ngebiola}} {{qualifier|violin}},
-{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t|ku|مۆسیقا لێدان|tr=mósíqa lédan|sc=ku-Arab}}
 * Latin: {{t|la|inflo}}, {{t+|la|cano}}, {{t|la|sono}}
@@ -321,6 +321,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Swahili: {{t+|sw|cheza|alt=-cheza}}
 * Swedish: {{t+|sv|spela}}
 * Tagalog: {{t|tl|tumugtog}}
+* Tibetan: {{t|bo|རོལ་ཆ་བཏང}}
 * Turkish: {{t+|tr|çalmak}}
 {{trans-bottom}}
 
