--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -39,6 +39,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 
 ====Translations====
 {{trans-top|act of stabbing}}
+* Assamese: {{t+|as|খোঁচা}}, {{t+|as|হেঁচা}}
 * Asturian: {{t|ast|puñalada|f}}
 * Catalan: {{t+|ca|punyalada|f}} (general), {{t+|ca|ganivetada|f}} (with knife)
 * Czech: {{t|cs|bodnutí}}
