t+gl:[[coidar]] t+gl:[[pensar]] ([[WT:EDIT|Assisted]]) <feel#49593939>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -241,6 +241,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 * Czech: {{t+|cs|cítit}}
 * Finnish: {{t+|fi|tuntea}}, {{t+|fi|tuntua}}
 * French: {{t+|fr|sentir}}, {{t+|fr|penser}}
+* Galician: {{t+|gl|coidar}}, {{t+|gl|pensar}}
 * German: {{t+|de|fühlen}}, {{t+|de|denken}}, {{t|de|das Gefühl haben}}
 * Greek: {{t+|el|ψυλλιάζομαι}}
 {{trans-mid}}
