t+gl:[[apalpar]] ([[WT:EDIT|Assisted]]) <feel#49593942>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -263,6 +263,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 * Bulgarian: {{t+|bg|опипвам|sc=Cyrl}}
 * Burmese: {{t+|my|စမ်းသပ်|sc=Mymr}}
 * Finnish: {{t+|fi|tunnustella}}
+* Galician: {{t|gl|apalpar}}
 * Latvian: {{t|lv|taustīt}}
 {{trans-mid}}
 * Norwegian: {{t+|no|kjenne|alt=kjenne etter}}, {{t+|no|føle}}
