--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -70,18 +70,39 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 
 ====Derived terms====
 {{der4|lang=en|title=Terms derived from ''suck'' (verb)
-|[[insuck]]
-|[[suckable]]
-|[[sucker]]
-|[[suckle]]
-|[[suckling]]
-|[[suck the air out of]]
-|[[sucky]]
-|[[sucky-sucky]]
+|give suck|
+|insuck
+|suckable
+|suck a lemon
+|suck arse
+|suck ass
+|suck and blow
+|suck balls
+|suck cock
+|suck donkey balls
+|suck donkey cock
+|suck donkey dick
+|sucker
+|suck face
+|suck hind tit
+|suck into
+|suck it
+|suck it up
+|suckle
+|suck lemons
+|suckling
+|suck my balls
+|suck off
+|suck on that
+|suck out
+|suck rocks
+|suck the air out of
+|suck tits
+|suck up
+|sucky
+|sucky-sucky
+|suck a big one
 }}
-
-====Related terms====
-{{rel4|lang=en|title=Terms related to ''suck'' (verb)|give suck|[[suck a big one]]|[[suck a lemon]]|[[suck arse]]|[[suck ass]]|[[suck balls]]|[[suck cock]]|[[suck donkey balls]]|[[suck donkey cock]]|[[suck donkey dick]]|[[suck face]]|[[suck hind tit]]|[[suck into]]|[[suck it]]|[[suck it up]]|[[suck lemons]]|[[suck my balls]]|[[suck off]]|[[suck on that]]|[[suck out]]|[[suck rocks]]|[[suck tits]]|[[suck up]]|[[teach grandmother to suck eggs]]}}
 
 ====Translations====
 {{trans-top|to use the mouth to pull in (liquid etc)}}
