--- a/en/坮/坮.13041.wikitext
+++ b/en/坮/坮.13041.wikitext
@@ -1,20 +1,20 @@
+{{also|臺}}
 {{character info/new}}
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=GIR|ids=⿰土台}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=43160|canj=GIR|ids=⿰土台}}
 
-# [[platform]]
-# [[unit]]
-# [[term]] of [[address]]
+====Derived characters====
+* {{l|mul|[[𫞱]]}}
 
 ====References====
-* {{Han ref|kx=0226.270|dkj=04983|dj=0462.050|hdz=10436.060|uh=576E|ud=22382}}
+{{Han ref|kx=0226.270|dkj=04983|dj=0462.050|hdz=10436.060|uh=576E}}
 
 ----
 
 ==Chinese==
-{{zh-see|臺|v}}
+{{zh-see|臺|ha}}  <!-- [1] 《龍龕手鑑》 坮： 俗㙵，通㙜，古文臺字。 [2] 《字彙》 坮： 古文臺字。 --> 
 
 ----
 
