--- a/en/偊/偊.11098.wikitext
+++ b/en/偊/偊.11098.wikitext
@@ -44,8 +44,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
 
-# [http://jisho.org/kanji/details/%E5%81%8A self-reliant]
-# [http://jisho.org/kanji/details/%E5%81%8A to walk alone]
+# {{rfdef|ja}}
 
 ====Readings====
 * {{ja-readings|on=[[う]] (u), [[く]] (ku)|kun=[[くぐまるさま]] (kugumarusama), [[つつしむさま]] (tsutsushimusama)}}
