--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -427,6 +427,10 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 #: {{ux|en|'''Cut''' the engines when the plane comes to a halt!}}
 # {{lb|en|sports}} To drive (a [[ball]]) to one side, as by (in billiards or croquet) hitting it [[fine]] with another ball, or (in tennis) striking it with the racket inclined.
 # {{lb|en|bodybuilding}} To [[lose]] [[body]] [[mass]] after [[bulk]]ing, aiming to keep the additional [[muscle]] but lose the [[fat]].
+# To perform (a dancing movement etc.).
+#: ''to [[cut a caper]]''
+#* '''1863''', Sheridan Le Fanu, ''{{w|The House by the Churchyard}}''
+#*: 'Choke, chicken, there's more a-hatching,' said Miss Mag, in a sort of aside, and '''cutting''' a flic-flac with a merry devilish laugh, and a wink to Puddock.
 
 ====Synonyms====
 * See [[Thesaurus:cut]]
