--- a/en/垍/垍.13072.wikitext
+++ b/en/垍/垍.13072.wikitext
@@ -9,21 +9,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[gei6]], [[gei3]]|y=gei6, gei3}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土06}}
+===Pronunciation===
+{{zh-pron
+|m=jì,jī
+|c=gei3,gei6
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jì]] ([[ji4]]), [[léi]] ([[lei2]]), [[lèi]] ([[lei4]]), [[lǜ]] ([[lü4]])|wg=chi<sup>4</sup>, lei<sup>2</sup>, lei<sup>4</sup>, lü<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
