--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -4,8 +4,11 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=40127|canj=GYHS|ids=⿰土方}}
 
+====Derived characters====
+* {{l|mul|[[𠩝]]}}
+
 ====References====
-* {{Han ref|kx=0225.070|dkj=04924|dj=0459.270|hdz=10427.010|uh=574A|ud=22346|bh=A77B|bd=42875}}
+{{Han ref|kx=0225.070|dkj=04924|dj=0459.270|hdz=10427.010|uh=574A}}
 
 ----
 
