t+bo:[[འཇིབས]] t-balance ([[WT:EDIT|Assisted]]) <suck#49607210>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -152,8 +152,8 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Kurdish: {{t+|ku|mêjîn}}, {{t+|ku|mêtin}}, {{t+|ku|مژین|sc=ku-Arab}}
 * Kyrgyz: {{t|ky|эмүү}}, {{t|ky|соруу}}
 * Lao: {{t|lo|ດູດ}}
-{{trans-mid}}
 * Latgalian: {{t|ltg|syukt}}, {{t|ltg|čuļpt}}
+{{trans-mid}}
 * Latin: {{t+|la|sugo}}
 * Latvian: {{t+|lv|sūkt}}
 * Lithuanian: {{t|lt|čiul̃pti}}
@@ -188,6 +188,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Tajik: {{t+|tg|макидан|sc=Cyrl}}
 * Telugu: {{t+|te|చీకు|sc=Telu}}
 * Thai: {{t+|th|ดูด}}
+* Tibetan: {{t|bo|འཇིབས}}
 * Turkish: {{t+|tr|emmek}}
 * Turkmen: {{t|tk|emmek}}, {{t|tk|sormak}}
 * Ukrainian: {{t|uk|смокта́ти|impf}}, {{t|uk|сса́ти|impf}}
