t+bo:[[ས་ཕག]] t-balance t+za:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <brick#49613038>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -216,6 +216,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Tatar: {{t+|tt|кирпеч|sc=Cyrl}}
 * Telugu: {{t+|te|ఇటుక|sc=Telu}}
 * Thai: {{t+|th|อิฐ}}
+* Tibetan: {{t|bo|ས་ཕག}}
 * Tigrinya: {{t|ti|ሑጡብ}}
 * Tsez: {{t|ddo|кирпич|tr=kirpič}}, {{t|ddo|агури|tr=aguri}}
 * Tswana: {{t|tn|setena|c7}}
@@ -238,6 +239,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * White Hmong: {{t|mww|thwv cib}}
 * Yakut: {{t|sah|кирпииччэ}}
 * Yiddish: {{t|yi|ציגל|n|sc=Hebr}}
+* Zhuang: {{t-needed|za}}
 * Zulu: {{t|zu|isitini|c7|c8}}
 {{trans-bottom}}
 
