--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -65,7 +65,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * French: {{t+|fr|coûter}}, {{t+|fr|couter}}
 * Friulian: {{t|fur|costâ}}
 * Galician: {{t|gl|custar}}
-* Georgian: {{t+|ka|ღირებულება}}
+* Georgian: {{t+|ka|ღირს}}
 * German: {{t+|de|kosten}}
 * Greek: {{t+|el|κοστίζω}} (means also "to cause damage or distress"), {{t+|el|στοιχίζω}} (means also "to inflict" and "to align"), {{t+|el|τιμώμαι}}, {{t+|el|κάνω}} [colloquial (has a huge number of meanings, one of them is "to cost")]
 * Hungarian: {{t+|hu|kerül}}
