--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -376,7 +376,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Norwegian: {{t+|no|komme}}
 * Polish: {{t+|pl|dochodzić|impf}}, {{t+|pl|dojść|pf}}
 * Portuguese: {{t+|pt|gozar}}
-* Russian: {{t+|ru|конча́ть|impf}}, {{t+|ru|ко́нчить|pf}}, {{t+|ru|спустить|pf|tr=spustít'}} {{qualifier|colloquial}}, {{t+|ru|эякулировать|tr=eyakulírovat'}} {{qualifier|medical}}
+* Russian: {{t+|ru|конча́ть|impf}}, {{t+|ru|ко́нчить|pf}}, {{t+|ru|спустить|pf|tr=spustít'}} {{qualifier|colloquial}}, {{t+|ru|эякулировать|tr=eyakulírovat'}} {{qualifier|medical}}, {{t+|ru|извергать|impf|tr=izvergát}} {{qualifier|formal}}
 * Serbo-Croatian: {{t+|sh|svršiti}} {{qualifier|colloquial}}
 * Spanish: {{t+|es|correrse}}, {{t+|es|venirse}}
 * Thai: {{t|th|ถึงจุดสุดยอด|tr=těung jùt sùt yôt}}, {{t+|th|เสร็จ}}
