--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -4,7 +4,7 @@
 [[File:Olea_europaea1.jpg|thumb|a typical '''olive''' tree ({{taxlink|Olea europaea|species|noshow=1|ver=161227}}) (1)]]
 
 ===Etymology===
-From {{der|en|fro|olive||olive, olive tree}}, from {{der|en|la|olīva||olive}}, from {{der|en|grc|ἐλαία}}, from {{der|en|ine-pro|*loiwom}} (compare {{cog|cu|лои||tallow}}, {{cog|xcl|եւղ||oil}}).<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref>
+From {{inh|en|enm|olyve}}, from {{der|en|fro|olive||olive, olive tree}}, from {{der|en|la|olīva||olive}}, from {{der|en|grc|ἐλαία}}, from {{der|en|ine-pro|*loiwom}} (compare {{cog|cu|лои||tallow}}, {{cog|xcl|եւղ||oil}}).<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref>
 
 ===Pronunciation===
 * {{enPR|ŏl'ĭv}}, {{IPA|/ˈɒlɪv/|lang=en}}
