--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -107,6 +107,7 @@ From {{inh|en|enm|olyve}}, from {{der|en|fro|olive||olive, olive tree}}, from {{
 * Malayalam: {{t+|ml|ഒലിവ്|sc=Mlym}}
 * Maltese: {{t|mt|żebbuġa|f}}
 * Maori: {{t|mi|ōriwa}}
+* Middle English: {{t|enm|olyve}}
 * Middle Persian: {{t|pal|𐭦𐭩𐭲𐭩|tr=zayt|sc=Phli}}
 * Mongolian: {{t|mn|чидун жимс|sc=Cyrl}}
 * Ngizim: {{t|ngi|zatun}}
@@ -289,6 +290,15 @@ From {{inh|fr|la|oliva}}.
 
 ===Anagrams===
 * {{l|it|Elvio}}, {{l|it|ovile}}, {{l|it|viole}}, {{l|it|voile}}
+
+----
+
+==Middle English==
+
+===Noun===
+{{head|enm|noun}}
+
+# {{alternative form of|olyve|lang=enm}}
 
 ----
 
