--- a/en/均/均.13002.wikitext
+++ b/en/均/均.13002.wikitext
@@ -44,7 +44,7 @@
 # {{lb|zh|Chinese music}} [[key]]; [[pitch]]
 
 ===Compounds===
-{{zh-der|功均一匡|均賦|均勻|五均六管|平均利潤|均買均賣|均派|均田制|均等|均富|功均柱地|力均勢敵|均一|均賠|平均值|勢均力敵|平均律|均權|功均天地|均輸|平均風速|平均股價|平均繼承|平均溫度|平均成本|平均工資|平均壽命|平均|勞逸不均|平均主義|均攤|安定均衡|力敵勢均|利益均霑|均勢|均霑|均衡|均夷作用|均可|均權制度|平均地權|不平均|平均數|均分|不均|均之|平均時差|戶均|智均力敵|權力均衡|淑均|成均|鴻均|貧富不均|總平均}}
+{{zh-der|功均一匡|均賦|均勻|五均六管|平均利潤|均買均賣|均派|均田制|均等|均富|功均柱地|力均勢敵|均一|均賠|平均值|勢均力敵|平均律|均權|功均天地|均輸|平均風速|平均股價|平均繼承|平均溫度|平均成本|平均工資|平均壽命|平均|勞逸不均|平均主義|均攤|安定均衡|力敵勢均|利益均霑|均勢|均霑|均衡|均夷作用|均可|均權制度|平均地權|不平均|平均數|均分|不均|均之|平均時差|戶均|智均力敵|權力均衡|淑均|成均|鴻均|貧富不均|總平均|均川}}
 
 {{zh-cat|Intermediate}}
 
