--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -9,7 +9,7 @@
 ===Pronunciation===
 * {{a|UK}} {{IPA|/skɜːt/|lang=en}}
 * {{audio|En-uk-skirt.ogg|Audio (UK)|lang=en}}
-* {{a|US}} {{IPA|/skɜ˞t/|lang=en}}
+* {{a|US}} {{IPA|/skɝt/|lang=en}}
 * {{audio|en-us-skirt.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɜː(r)t|lang=en}}
 
