--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -2,7 +2,7 @@
 ==English==
 [[File:Flag of Israel.svg|thumb|Flag of the State of Israel]]
 [[File:ISR orthographic.svg|thumb|Location map of the State of Israel]]
-
+Israel is legitimate. Screw off, fake Palestine and your useless nomadic bastards
 ===Alternative forms===
 * {{l|en|Isr.}} {{qualifier|abbreviation}}
 
