--- a/en/偐/偐.11104.wikitext
+++ b/en/偐/偐.11104.wikitext
@@ -11,6 +11,27 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Glyph origin===
+{{Han etym}}
+
+===Pronunciation===
+{{zh-pron
+|m=yàn
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -19,22 +40,16 @@
 # {{defn|lang=ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[がん]] (gan), [[げん]] (gen)|kun=[[いつわる]] (itsuwaru), [[にせ]] (nise)}}
+{{ja-readings
+|goon=げん
+|kanon=がん
+|kun=いつわ-る, にせ}}
 
 ----
 
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=안|rv=an|mr=an}}
+{{ko-hanja|hangeul=안}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yàn]] ([[yan4]])|wg=yen<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
