--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -94,7 +94,7 @@
 ===Noun===
 {{ja-noun|かさ|count=本|カサ}}
 
-# an [[umbrella]] {{gl|cloth-covered frame used for protection against rain or sun}}
+# [[umbrella]] {{gl|cloth-covered frame used for protection against rain or sun}}
 #: {{ja-usex|傘を差す|かさ を さす|hold an umbrella}}
 #: {{ja-usex|傘を広げる|かさ を ひろげる|open an umbrella}}
 #: {{ja-usex|傘をすぼめる|かさ を すぼめる|close an umbrella}}
@@ -118,6 +118,7 @@
 |chapter={{lj|[ＰＡＲＴ](パート).６　[伝](でん)[説](せつ)の[相](あい)[合](あい)ガサ}}
 |trans-chapter=PART.6 The Legendary Coupling Umbrella
 |language=Japanese}}
+# [[bell]]; [[umbrella]] {{q|of a jellyfish}}
 
 ====Derived terms====
 {{der-top}}
