--- a/en/坫/坫.13038.wikitext
+++ b/en/坫/坫.13038.wikitext
@@ -12,12 +12,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=dim3|y=dim3}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土05}}
+===Pronunciation===
+{{zh-pron
+|m=diàn
+|c=dim3
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ----
 
@@ -29,27 +42,18 @@
 # stand on which to replace goblets after drinking
 
 ====Readings====
-* {{ja-readings|on=[[てん]] (ten), [[ちん]] (chin)|kun=[[さかい]] (sakai)}}
+{{ja-readings|on=[[てん]] (ten), [[ちん]] (chin)|kun=[[さかい]] (sakai)}}
 
 ----
 
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=점|rv=jeom|mr=chŏm}}
+{{ko-hanja|hangeul=점}}
 
 # [[boundary]]
 # [[limit]]
 # a saucer for a wine cup
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[diàn]] ([[dian4]])|wg=tien<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 ----
 
