--- a/en/垒/垒.13078.wikitext
+++ b/en/垒/垒.13078.wikitext
@@ -1,15 +1,26 @@
-{{also|壘}}
+{{also|壘|塁}}
 {{character info/new}}
 ==Translingual==
 {{Han simplified forms|壘|塁|垒}}
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=IIIG|ids=⿱厽土}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=23104|canj=IIIG|ids=⿱厽土}}
+
+====Derived characters====
+* {{l|mul|[[𣸫]], [[𡓸]]}}
+
+====Related characters====
+* {{l|mul|[[壘]]}} ''({{w|Traditional Chinese|Traditional form}} of 垒)''
 
 ====References====
-* {{Han ref|kx=0227.390|dkj=05039|dj=0463.240|hdz=10442.130|uh=5792|ud=22418}}
+{{Han ref|kx=0227.390|dkj=05039|dj=0463.240|hdz=10442.130|uh=5792}}
 
 ----
 
 ==Chinese==
+
+===Glyph origin===
+{{Han etym}}
+
+===Definitions===
 {{zh-see|壘}}
