--- a/en/晁/晁.17002.wikitext
+++ b/en/晁/晁.17002.wikitext
@@ -4,14 +4,24 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=06|sn=10|four=60113|canj=ALMO|ids=⿱日兆}}
 
+====Derived characters====
+* {{l|mul|[[𪳒]], [[𦃻]], [[𩺣]], [[𮄍]]}}
+
 ====References====
-* {{Han ref|kx=0494.210|dkj=13889|dj=0859.140|hdz=21508.150|uh=6641|ud=26177|bh=AED0|bd=44752}}
+{{Han ref|kx=0494.210|dkj=13889|dj=0859.140|hdz=21508.150|uh=6641}}
 
 ----
+
 ==Chinese==
 {{zh-forms}}
+{{zh-wp|zh:晁姓}}
+
+===Glyph origin===
+{{Han etym}}
+
 ===Etymology 1===
-====Pronunciation====
+
+====Pronunciation 1====
 {{zh-pron
 |m=Cháo
 |m-s=
@@ -30,25 +40,25 @@
 |cat=pn
 }}
 
-====Definitions====
+=====Definitions=====
 {{zh-hanzi}}
 
 # {{surname|lang=zh}}
 
-===Etymology 2===
-====Pronunciation====
+====Pronunciation 2====
 {{zh-pron
 |m=zhào
 |cat=pn
 }}
 
-====Definitions====
+=====Definitions=====
 {{zh-hanzi}}
 
 # {{zh-only|晁陽}}
 
-===Etymology 3===
+===Etymology 2===
 {{zh-see|朝|v}}
+
 ----
 
 ==Japanese==
@@ -70,13 +80,12 @@
 
 # {{defn|lang=ko|sort=日06}}
 
-
 ----
 
 ==Vietnamese==
 
 ===Han character===
-{{vi-readings|rs=日06|hanviet=triều}}
+{{vi-hantu|rs=日06|[[triều]]}}
 
 # {{defn|lang=vi|sort=日06}}
 
