--- a/en/惜/惜.15601.wikitext
+++ b/en/惜/惜.15601.wikitext
@@ -25,7 +25,7 @@ Note that 昔 has meaning of “past, ending”, hence connotations of “feelin
 |c_note=sik1 - literary; sek3 - vernacular
 |h=pfs=siak/sit
 |h_note=siak - vernacular; sit - literary
-|md=
+|md=sék
 |mn=qz:siak/tw,xm,zz:sek/sioh
 |mn_note=siak/sek - literary; sioh - vernacular
 |w=
