--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -4,6 +4,7 @@
 
 ===Alternative forms===
 * {{l|en|stomack}}
+* {{l|en|stumic}}
 
 ===Etymology===
 From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, from {{etyl|la|en}} {{m|la|stomachus}}, from {{etyl|grc|en}} {{m|grc|στόμαχος}}, from {{m|grc|στόμα||mouth}}. Displaced native [[Middle English]] {{m|enm|mawe||stomach, maw}} (from [[Old English]] {{m|ang|maga}}), [[Middle English]] {{m|ang|bouk|bouk, buc|belly, stomach}} (from [[Old English]] {{m|ang|buc||belly, stomach}}, see [[bucket]]).
