/* Translations */ <United States of America#49672317>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -69,6 +69,7 @@
 *: Min Nan: {{t|nan|美國|sc=Hani}}, {{t|nan|美国|tr=Bí-kok|sc=Hani}}, {{t|nan|米國|sc=Hani}}, {{t+|nan|米国|tr=Bí-kok|sc=Hani}}
 *: Wu: {{t|wuu|美國}}, {{t|wuu|美国|tr='me koq}}
 * Chuvash: {{t|cv|Америкӑри Пӗрлешӳллӗ Штатсем|sc=Cyrl}}
+* Coptic: {{t|cop|ⲣⲉⲑⲱⲟⲩ ⲉⲧⲧⲟⲙⲓ `ⲛⲧⲉ ⲁⲙⲉⲣⲓⲕⲏ}}
 * Crimean Tatar: {{t|crh|Amerika Qoşma Ştatları|p}}
 * Czech: {{t+|cs|Spojené státy americké|m-p}}, {{t|cs|Spojené státy|m-p}}
 * Danish: {{t|da|Amerikas Forenede Stater}}, {{t|da|Forenede Stater}}
