t+es:[[enjundia]] ([[WT:EDIT|Assisted]]) <substance#49673896>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -123,6 +123,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Finnish: {{t+|fi|rakenne}}
 {{trans-mid}}
 * Korean: {{t+|ko|실체}}, {{t+|ko|본질}}
+* Spanish: {{t+|es|enjundia}}
 {{trans-bottom}}
 
 {{trans-top|material possessions}}
