--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -159,7 +159,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Urdu: {{t|ur|شاخ|tr=śāx|sc=ur-Arab}}
 * Uyghur: {{t|ug|پۇتاق}}, {{t|ug|شاخ}}
 * Uzbek: {{t+|uz|boʻlim}}, {{t+|uz|butoq}}, {{t+|uz|shox}}
-* Vietnamese: {{t+|vi|nhánh}}, {{t+|vi|ngành}}
+* Vietnamese: {{t+|vi|cành}}, {{t+|vi|nhánh}}
 * Walloon: {{t+|wa|coxhe|f}}
 * White Hmong: {{t-needed|mww}}
 * Yagnobi: {{t|yai|шох}}
