--- a/en/偉/偉.11097.wikitext
+++ b/en/偉/偉.11097.wikitext
@@ -4,19 +4,19 @@
 {{ja-forms|偉|[[伟]]|偉}}
 
 ====Alternative forms====
-Note that in Japanese {{w|shinjitai}}, the bottom component of {{l|mul|韋}} is written {{l|mul|ヰ}} with four strokes. In {{w|traditional Chinese}}, the bottom component is written {{l|mul|㐄}} with three strokes.
+In Japanese {{w|kanji}}, the bottom component of {{l|mul|韋}} is written <font size=4>{{l|ja|ヰ}}</font> with four strokes. In {{w|traditional Chinese}}, the bottom component is written {{l|mul|㐄}} with three strokes.
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|asj=10|sn=11|snj=12|four=24256|canj=ODMQ|ids=⿰亻韋(GHTJKV)}}
+{{Han char|rn=9|rad=人|as=09|asj=10|sn=11|snj=12|four=24256|canj=ODMQ|ids=⿰亻韋}}
 
 ====Derived characters====
-* {{l|mul|[[𫉔]], [[𬎉]]}}
+* {{l|mul|[[𬎉]], [[𬿭]], [[𫉔]]}}
 
-====Descendants====
+====Related characters====
 * {{l|mul|[[伟]]}} ''({{w|Simplified Chinese}})''
 
 ====References====
-* {{Han ref|kx=0110.050|dkj=00837|dj=0234.020|hdz=10198.040|uh=5049|ud=20553|bh=B0B6|bd=45238}}
+{{Han ref|kx=0110.050|dkj=00837|dj=0234.020|hdz=10198.040|uh=5049}}
 
 ----
 
