Moved glyph origin to Chinese section. Added derived characters and Chinese compounds. <昭#49689383>

--- a/en/昭/昭.16981.wikitext
+++ b/en/昭/昭.16981.wikitext
@@ -1,26 +1,24 @@
 {{character info/new}}
 ==Translingual==
-
-===Glyph origin===
-{{Han etym}}
-{{Han compound|日|召|ls=psc|c1=s|c2=p|t1=sun}}.
+{{stroke order|strokes=9}}
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=67062|canj=ASHR|ids=⿰日召}}
 
-# [[bright]], [[luminous]]
-# [[illustrious]]
-
 ====Derived characters====
-* [[照]]
+* {{l|mul|[[𡎣]], [[𣸬]], [[𧼹]], [[𭫁]], [[𤋜]], [[照]]}}
 
 ====References====
-* {{Han ref|kx=0493.220|dkj=13855|dj=0858.020|hdz=21504.090|uh=662D|ud=26157|bh=AC4C|bd=44108}}
+{{Han ref|kx=0493.220|dkj=13855|dj=0858.020|hdz=21504.090|uh=662D}}
 
 ----
 
 ==Chinese==
 {{zh-forms}}
+
+===Glyph origin===
+{{Han etym}}
+{{Han compound|日|召|ls=psc|c1=s|c2=p|t1=sun}}.
 
 ===Pronunciation===
 {{zh-pron
@@ -32,13 +30,18 @@
 |w=
 |mc=y
 |oc=y
-|cat=
+|cat=a,n,pn
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# [[bright]], [[luminous]]
+# [[illustrious]]
+# {{surname|lang=zh}}
+
+====Compounds====
+{{zh-der|劣跡昭著|天理昭彰|惡名昭彰|德業長昭|天理昭昭|含冤昭雪|哭昭陵|光昭|天理昭然|仁昭法外|昭昭|昭示|昭顯|懿範長昭|昭披耶河|昭彰|昭陵六駿|昭陵|昭回|昭明文選|眾目昭彰|昭然|昭雪|昭君和番|昭和草|昭然若揭|昭關|昭穆|昭如日星|昭陽|昭冤申枉|昭華|昭代|昭君出塞|昭明|昭和|昭灼|昭告|昭陽殿|昭著|燕昭築臺|昭君怨|昭儀|楚昭萍實|昭王墜屨|臭名昭著|跌宕昭彰|罪惡昭著|鄭昭宋聾|臭名昭彰|道範長昭}}
 
 ----
 
