--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -3,7 +3,7 @@
 
 ===Etymology===
 From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|ang|flǣsċ}}, from {{inh|en|gem-pro|*flaiską}}, from {{der|en|ine-pro|*pleh₁ḱ-|t=to tear, peel off}}. Cognate {{cog|stq|Flaask|t=flesh}}, {{cog|fy|fleis|t=flesh}}, {{cog|nl|vlees|t=flesh}}, {{cog|nds|Fleesch|t=flesh}}, {{cog|de|Fleisch|t=flesh}}, 
-{{cog|sve|fläsk|t=flesh}}
+{{cog|sv|fläsk|t=flesh}},
 {{cog|da|flæsk|t=flesh}}, {{cog|no|flesk|t=flesh}}, {{cog|is|flesk|t=flesh}}.
 
 ===Pronunciation===
