--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -198,6 +198,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Venetian: {{t|vec|ciuciar}}
 * Vietnamese: {{t+|vi|bú}}
 * Welsh: {{t+|cy|sugno}}
+* White Hmong: {{t|mww|ntsai}}
 * Yiddish: {{t|yi|זויגן}}
 * Zulu: {{t|zu|ncela|alt=-ncela}}, {{t|zu|munca|alt=-munca}}, {{t|zu|munya|alt=-munya}}
 {{trans-bottom}}
