--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -701,7 +701,7 @@ Borrowed from {{bor|es|en|bridge}}.
 ==Swedish==
 
 ===Etymology===
-From {{etyl|en|sv}}.
+From {{der|sv|en|-}}.
 
 ===Noun===
 {{sv-noun|c}}
