--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -12,11 +12,11 @@
 * {{rhymes|ɪdʒ|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|brigge}}, from {{etyl|ang|en}} {{m|ang|brycġ||bridge}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*brugjō}}, {{m|gem-pro|*brugjǭ||bridge}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰerw-}}, {{m|ine-pro|*bʰrēw-||wooden flooring, decking, bridge}}.
+From {{der|en|enm|brigge}}, from {{der|en|ang|brycġ||bridge}}, from {{der|en|gem-pro|*brugjō}}, {{m|gem-pro|*brugjǭ||bridge}}, from {{der|en|ine-pro|*bʰerw-}}, {{m|ine-pro|*bʰrēw-||wooden flooring, decking, bridge}}.
 
 Cognate with {{cog|sco|brig}}, {{m|sco|brigg}}, {{m|sco|breeg||bridge}}, {{cog|stq|Brääch||bridge}}, West Frisian {{m|fy|brêge||bridge}}, Dutch {{m|nl|brug||bridge}}, German {{m|de|Brücke||bridge}}, {{cog|da|bro||bridge}} and {{m|da|brygge||wharf}}, {{cog|is|brú||bridge}} and {{m|is|brygga||pier}}, Gaulish {{m|cel-gau||bríva|bridge}}, {{cog|sh|brv||bridge, crossbar}}, Old Church Slavonic {{m|cu|бръвъно||beam|sc=Cyrs}} and Russian {{m|ru|бревно́||log}}.
 
-The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang|brycġian||to bridge, make a causeway, pave}}, derived from the noun. Cognate with {{cog|nl|bruggen||to bridge}}, {{cog|gml|bruggen||to bridge}}, {{cog|goh|bruccōn||to bridge}} (whence Modern German {{m|de|brücken}}).
+The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge, make a causeway, pave}}, derived from the noun. Cognate with {{cog|nl|bruggen||to bridge}}, {{cog|gml|bruggen||to bridge}}, {{cog|goh|bruccōn||to bridge}} (whence Modern German {{m|de|brücken}}).
 
 ====Noun====
 [[File:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]][[File:Violin bridge.jpg|thumb|right|The bridge of a violin]]
