--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -55,9 +55,12 @@ Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|n
 #* {{zh-x|這 個 變壓器 已經 燒 毀 了，早 該 拆 換 一 個 新 的 了。|This transformer has burnt out. It should have been replaced a long time ago.}}
 # (early) [[morning]]
 #* {{zh-x|我 今 早 沒 有 見到 他。|I didn't see him this '''morning'''.}}
-# [[good morning]], a contraction for [[早上好]]
+# [[good morning]]
 # [[before]]; in the [[past]] time
 #* {{zh-x|現在 這麼 匆忙，你 早 幹{gàn}嗎{má} 去 了。|So now you are in a hurry. What were you doing before?}}
+
+====Synonyms====
+{{zh-dial|早安}}
 
 ===Compounds===
 {{zh-der|儘早|半早|一早起了|古早|可早|一早|一黑早|大清早|不早不晚|一早起|一大早|不早|屍骨早寒|侵早|及早|大清早上|好早晚|大清早起|大早|多早晚|即早兒|又早|早生貴子|早晌|早期|早賜玉音|早遲|早衰|早來|早年|早茶|早退|早婚|拜早年|早報|早材|早參|早死|早起|早餐會|早就|早慧|早占勿藥|早名必折|早尖|早難道|早場|早飯|早夭|早早|早是|早膳|打早|早出晚歸|早熟|明早|提早|早晨|早衙|早春|早霞|清早|早上|早點兒|早稻|早課|早班|早已|早熟兒童|早點|早先|早產兒|早餐|早霜|早逝|早迷晚寤|次早|早晚|早日|早安|早則|早產|早朝|早操|遲早|絕早|趕早|起早貪黑|遛早兒|老早|起早|黑早|這早晚|還早|遲行早住|言之過早|趁早}}
