--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -89,9 +89,9 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * Korean: {{t+|ko|코트}}, {{t+|ko|외투}}
 * Kyrgyz: {{t|ky|пальто}}
 * Latgalian: {{t|ltg|svuorks}}, {{t|ltg|kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
+{{trans-mid}}
 * Latin: {{t|la|pallium|n}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
-{{trans-mid}}
 * Lithuanian: {{t|lt|paltas|m}}
 * Luhya: {{t|luy|kumuchosi}}
 * Macedonian: {{t|mk|капут|m|sc=Cyrl}}
@@ -119,6 +119,7 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * Tajik: {{t|tg|палто}}
 * Taos: {{t|twf|kùti’ína}}
 * Thai: {{t|th|เสื้อนอก}}, {{t|th|เสื้อโค้ท}}
+* Tibetan: {{t|bo|ཀོར}}, {{t|bo|ཕྱུ་པ}}
 * Turkish: {{t+|tr|palto}}
 * Ukrainian: {{t+|uk|пальто́|n|sc=Cyrl}}, {{t|uk|піджа́к|sc=Cyrl}} {{qualifier|jacket}}
 * Uyghur: {{t|ug|پەلتو}}
