t+bo:[[སྤུ]] t+bo:[[བལ]] ([[WT:EDIT|Assisted]]) <coat#49746500>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -170,6 +170,7 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * Spanish: {{t+|es|pelaje|m}}
 * Swahili: {{t+|sw|koti}}
 * Swedish: {{t|sv|hårbeklädnad}}, {{t+|sv|päls}}, {{t|sv|fjäderdräkt}}
+* Tibetan: {{t|bo|སྤུ}}, {{t|bo|བལ}} {{qualifier|sheep}}
 {{trans-bottom}}
 
 {{trans-top|canvas secured around mast}}
