--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -161,3 +161,4 @@ Three other forms were found in the oracle bone script:
 {{vi-hantu|[[Minh]]|proper}}
 
 # {{given name|male|lang=vi|sort=Minh}}
+# The Ming Dynasty in China's history
