--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -1,12 +1,16 @@
 {{character info/new}}
 ==Translingual==
+{{stroke order|strokes=13}}
 {{stroke order|type=animate}}
 
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=46330|canj=DUP|ids=⿱相心}}
 
+====Derived characters====
+* {{l|mul|[[𫾋]]}}
+
 ====References====
-* {{Han ref|kx=0392.260|dkj=10858|dj=0728.100|hdz=42320.110|uh=60F3|ud=24819|bh=B751|bd=46929}}
+{{Han ref|kx=0392.260|dkj=10858|dj=0728.100|hdz=42320.110|uh=60F3}}
 
 ----
 
