--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -92,7 +92,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 # {{lb|en|transitive}} To put in action or motion.
 #: {{ux|en|to '''play''' cannon upon a fortification;&emsp; {{nowrap|to '''play''' a trump in a card game}}}}
 # {{lb|en|transitive}} To keep in play, as a [[hook]]ed [[fish]], in order to [[land]] it.
-# {{lb|en|transitive}} To [[manipulate]] or [[deceive]] someone.
+# {{lb|en|transitive|colloquial}} To [[manipulate]] or [[deceive]] someone.
 #: {{ux|en|You '''played''' me!}}
 
 ====Hypernyms====
