t+de:[[täuschen]] t+de:[[hinters Licht führen]] t+de:[[verarschen]] ([[WT:EDIT|Assisted]]) <play#49753150>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -453,6 +453,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 
 {{trans-top|manipulate or deceive someone}}
 {{trans-mid}}
+* German: {{t+|de|täuschen}}, {{t+|de|hinters Licht führen}}, {{t+|de|verarschen}}
 {{trans-bottom}}
 
 {{checktrans-top}}
