t+es:[[embaucar]] t+es:[[hacer tonto]] ([[WT:EDIT|Assisted]]) <play#49753157>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -454,7 +454,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 {{trans-top|manipulate or deceive someone}}
 {{trans-mid}}
 * German: {{t+|de|täuschen}}, {{t+|de|hinters Licht führen}}, {{t+|de|verarschen}}
-* Spanish: {{t+|es|engrupir}}, {{t+|es|engañar}}
+* Spanish: {{t+|es|engrupir}}, {{t+|es|engañar}}, {{t+|es|embaucar}}, {{t|es|hacer tonto}}
 {{trans-bottom}}
 
 {{checktrans-top}}
