/* Etymology 1 */ contradicted by grc entry <butter#49753819>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -16,7 +16,7 @@
 * {{hyphenation|but|ter|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}}, from {{inh|en|ang|butere||butter}}, from {{inh|en|gem-pro|*buterǭ||butter}} (compare {{cog|fy|bûter}}, {{cog|nl|boter}}, {{cog|de|Butter}}), from {{der|en|la|būtȳrum}}, from {{der|en|grc|βούτῡρον||cow cheese}}, compound of {{m|grc|βοῦς||ox, cow}} and {{m|grc|τῡρός||cheese}}, from {{etyl|xsc|en}}.
+From {{etyl|enm|en}}, from {{inh|en|ang|butere||butter}}, from {{inh|en|gem-pro|*buterǭ||butter}} (compare {{cog|fy|bûter}}, {{cog|nl|boter}}, {{cog|de|Butter}}), from {{der|en|la|būtȳrum}}, from {{der|en|grc|βούτῡρον||cow cheese}}, compound of {{m|grc|βοῦς||ox, cow}} and {{m|grc|τῡρός||cheese}}.
 
 Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{der|en|ine-pro|*tuHrós}} (compare [[Middle Indic]] {{m|und|tr=tūra|gloss=cheese}}, {{cog|ru|творо́г||curds, soft cheese}}, {{cog|ang|þweran||to churn}}, {{m|ang|geþweor||curds}}).
 
