--- a/en/傌/傌.11164.wikitext
+++ b/en/傌/傌.11164.wikitext
@@ -7,6 +7,9 @@
 ====Derived characters====
 * {{l|mul|[[𧝥]]}}
 
+====Related characters====
+* {{l|mul|[[㐷]]}} ''({{w|Simplified Chinese}})''
+
 ====References====
 {{Han ref|kx=0113.010|dkj=00947|dj=0240.110|hdz=10200.020|uh=508C}}
 
