/* Chinese */ Added usage notes. <愠#49755233>

--- a/en/愠/愠.15667.wikitext
+++ b/en/愠/愠.15667.wikitext
@@ -14,7 +14,15 @@
 ----
 
 ==Chinese==
-{{zh-see|慍|svt}} <!-- Refer HKSCS 2016 -->
+
+===Glyph origin===
+{{Han simp|慍|f=𥁕|t=昷}}.
+
+===Definitions===
+{{zh-see|慍|svt}}
+
+===Usage notes===
+This character is the preferred form used in Hong Kong. <!-- Refer HKSCS 2016 and http://input.foruto.com/ccc/gongbiu/dzijingbiu/ -->
 
 ----
 
