--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -245,6 +245,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Occitan: {{t+|oc|Alemanha|f}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|Нѣмьци|p|sc=Cyrs}}
+*: Galgolitic: {{t|cu|Ⱀⱑⰿⱏⱌⰹ|p|sc=}}
 * Old French: {{t|fro|Alemaigne|f}}
 * Old Occitan: {{t|pro|Alamagna}}
 * Oriya: {{t+|or|ଜର୍ମାନୀ|sc=Orya}}
