t+is:[[stjórnpallur]] ([[WT:EDIT|Assisted]]) <bridge#49772266>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -371,6 +371,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * German: {{t+|de|Brücke|f}}
 * Greek: {{t+|el|γέφυρα|f}}
 * Hungarian: {{t+|hu|híd}}
+* Icelandic: {{t|is|stjórnpallur|m}}
 * Irish: {{t+|ga|droichead|m}}
 * Japanese: {{t|ja|船橋|tr=せんきょう, senkyo|sc=Jpan}}
 * Maori: {{t|mi|piriti}}
