--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -58,7 +58,7 @@
 {{zh-hanzi}}
 
 # {{rfv-sense|zh}} {{lb|zh|archaic}} [[obedient]]
-# {{zh-only|倭遲|dot=,}} {{zh-alt-form|逶迤|[[winding]]; [[meandering]]|nocap=y}}
+# {{zh-used in|倭遲|dot=,}} {{zh-alt-form|逶迤|[[winding]]; [[meandering]]|nocap=y}}
 
 ===Pronunciation 3===
 {{zh-pron
