--- a/en/偱/偱.11137.wikitext
+++ b/en/偱/偱.11137.wikitext
@@ -9,6 +9,21 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=xún
+}}
+
+===Definition===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -18,12 +33,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[しゅん]] (shun)|kun=[[のべる]] (noberu)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xún]] ([[xun2]])|wg=hsün<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
