--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -57,6 +57,7 @@ Note the different forms, corresponds to different forms of [[真]].
 |goon=じん
 |kanon=しん
 |kun=つつし-む, つつしみ
+|nanori=みつ
 }}
 
 ===Proper noun===
