t+bo:[[ཤིང་ཏོག་པ་ལམ]] t-balance ([[WT:EDIT|Assisted]]) <plum#49858081>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -236,8 +236,8 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Kyrgyz: {{t+|ky|кайналы}}, {{t|ky|кара өрүк}}
 * Ladin: {{t|lld|sunjin|m}}
 * Lao: {{t|lo|ໝາກໝັ້ນ|sc=Laoo}}
-{{trans-mid}}
 * Latin: {{t|la|prūnum|n}}
+{{trans-mid}}
 * Latvian: {{t+|lv|plūme|f}}
 * Lithuanian: {{t+|lt|slyva}}
 * Low German: {{t|nds|Pluum|f}}
@@ -281,6 +281,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Tagalog: {{t|tl|sirwelas}}
 * Taos: {{t|twf|pùlulúna}}
 * Thai: {{t|th|พลัม}}, {{t|th|พรุน}}
+* Tibetan: {{t|bo|ཤིང་ཏོག་པ་ལམ}}
 * Turkish: {{t+|tr|erik}}
 * Turkmen: {{t|tk|erik}}
 * Ukrainian: {{t|uk|сли́ва|f|sc=Cyrl}}
