--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -120,6 +120,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 *: Bokmål: {{t+|nb|telle}}
 *: Nynorsk: {{t+|nn|telja}}
 * Old Church Slavonic: {{t|cu|чисти}}
+* Old English: {{t|ang|tellan}}
 * Old Norse: {{t|non|telja}}
 * Persian: {{t+|fa|شمردن|tr=šomordan}}
 * Polish: {{t+|pl|liczyć}}
