t+cmn:[[算数]] t+cmn:[[算]] ([[WT:EDIT|Assisted]]) <count#49872457>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -160,6 +160,8 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 {{trans-top|to be of significance; to matter}}
 * Bulgarian: {{t|bg|имам значение}}
 * Catalan: {{t+|ca|comptar}}, {{t+|ca|valdre}}
+* Chinese:
+*: Mandarin: {{t+|cmn|算数|tr=suànshù}}, {{t+|cmn|算|tr=suàn}}
 * Czech: {{t|cs|počítat s}}
 * Estonian: {{t|et|lugema}}
 * French: {{t+|fr|compter}}
