t+fi:[[tiilinen]] t+fi:[[tiili]] t+fi:[[apu]] ([[WT:EDIT|Assisted]]) <brick#49924773>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -282,6 +282,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 {{trans-top|term for a helpful, reliable person}}
 * Danish: {{t|da|sveske|c}}, {{t|da|knag|c}}
 * Dutch: {{t+|nl|kanjer|m}}, {{t+|nl|toeverlaat|m}}, {{t+|nl|beschermengel|m}}
+* Finnish: {{t+|fi|apu}}
 * Icelandic: {{t|is|ágætis manneskja|f}}, {{t|is|perla af manni|f}}, {{t|is|fyrirtaks manneskja|f}}
 {{trans-mid}}
 * Mandarin: {{t-check|cmn|好心腸|alt=好心腸的|sc=Hani}}, {{t-check|cmn|好心肠|alt=好心肠的|tr=hǎo xīn cháng de|sc=Hani}}
@@ -296,6 +297,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 *: Mandarin: {{t+|cmn|磚頭|sc=Hani}}, {{t+|cmn|砖头|tr=zhuāntóu|sc=Hani}}
 * Czech: {{t+|cs|cihla|f}}
 * Dutch: {{t+check|nl|koelkast|f}}
+* Finnish: {{t+|fi|tiili}}
 * French: {{t-needed|fr}}
 * German: {{t|de|externes Netzteil|n}}
 {{trans-mid}}
@@ -336,6 +338,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Danish: {{t+|da|mursten}}s-
 * Dutch: {{t+|nl|bakstenen}}
 * Estonian: {{t|et|telliskivi-}}
+* Finnish: {{t+|fi|tiilinen}}
 * French: {{t|fr|en brique}}
 {{trans-mid}}
 * Icelandic: {{t|is|úr múrsteini}}
