--- a/en/旨/旨.16912.wikitext
+++ b/en/旨/旨.16912.wikitext
@@ -22,10 +22,18 @@
 ===Pronunciation===
 {{zh-pron
 |m=zhǐ
+|m-s=
 |c=zi2
+|c-t=
+|g=
+|h=pfs=chṳ́ 
+|j=
+|mb=cǐ
 |md=cī
 |mn=chí
+|mn-t=
 |w=2tsr
+|x=
 |mc=y
 |oc=y
 |cat=a,n
@@ -56,7 +64,8 @@
 
 ====Readings====
 {{ja-readings
-|on=し
+|goon=し
+|kanon=し
 |kun=むね-, うま-い
 }}
 
@@ -71,7 +80,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=지|eumhun=|rv=ji|mr=chi|y=ci}}
+{{ko-hanja|hangeul=지|eumhun=}}
 
 # {{defn|lang=ko|sort=日02}}
 
@@ -80,6 +89,6 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[chỉ]]|rs=日02}}
+{{vi-hantu|chỉ|rs=日02}}
 
 # royal order, decree
