/* See also */ <play#49938171>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -850,6 +850,10 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 {{wikipedia}}
 * {{l|en|outdoor}}
 
+===References===
+* {{R:OneLook}}
+* {{R:Century 1911}}
+
 {{catlangname|en|copulative verbs|ergative verbs}}
 
 ===Anagrams===
