/* Noun */ linguistics: changed "noun" to "word, character, or sign" (could be emoji, hanzi, sign language) <icon#49938817>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -21,8 +21,8 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 # {{lb|en|religion|especially|Eastern Christianity}} A type of religious painting portraying a [[saint]] or scene from [[Scripture]], often done on wooden panels.
 # A person or thing that is the best example of a certain profession or some doing.
 #: ''That man is an '''icon''' in the business; he personifies loyalty and good business sense.''
-# {{lb|es|computing}} A small picture which represents something (such as an icon on a computer screen which when clicked performs some function.)
-# {{lb|en|linguistics}} A type of noun whereby the form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons. See also {{m|en|symbol}} and {{m|en|index}}.
+# {{lb|es|computing}} A small picture that represents something (such as an icon on a computer screen which when clicked performs some function.)
+# {{lb|en|linguistics}} A word, character, or sign whereby the form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons. See also {{m|en|symbol}} and {{m|en|index}}.
 
 ====Derived terms====
 * {{l|en|aniconic}}, {{l|en|aniconism}}
