--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -227,8 +227,8 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 {{trans-mid}}
 * Italian: {{t+|it|conto|m}}, {{t+|it|conteggio|m}}, {{t+|it|calcolo|m}}
 * Norwegian:
-*: Bokmål: {{t|nb|opptelling|m|f}}
-*: Nynorsk: {{t|nn|oppteljing|f}}
+*: Bokmål: {{t|nb|opptelling|m|f}}, {{t|nb|telling|m|f}}
+*: Nynorsk: {{t|nn|oppteljing|f}}, {{t|nn|teljing|f}}
 * Polish: {{t+|pl|liczenie}}
 * Portuguese: {{t+|pt|contagem|f}}
 * Quechua: {{t|qu|yupa}}
