Undo revision 49991806 by [[Special:Contributions/2A01:E35:2E6F:D760:64:CE18:477E:1ED5|2A01:E35:2E6F:D760:64:CE18:477E:1ED5]] ([[User talk:2A01:E35:2E6F:D760:64:CE18:477E:1ED5|talk]]) - 'abbreviation' doesn't seem like a context label, it's either a definition template when e.g. [[sth]] is abbreviating [[something]], or etymological, like here where 'eg' is not abbreviating 'for example' <e.g.#49994934>

--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -15,7 +15,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 ===Adverb===
 {{en-adv|?}}
 
-# {{lb|en|abbreviation}} "[[for example]]" or "[[for the sake of]] an [[example]]": ''[[use]]d to [[introduce]] an [[illustrative]] [[example]] or [[short]] [[list]] of [[example]]s''.
+# "[[for example]]" or "[[for the sake of]] an [[example]]": ''[[use]]d to [[introduce]] an [[illustrative]] [[example]] or [[short]] [[list]] of [[example]]s''.
 #: ''Continents ('''e.g.''', Asia) contain many large bodies of water ('''e.g.''', lakes and inland seas) and many large flowing streams of water ([[i.e.]], rivers).''
 
 ====Usage notes====
