--- a/en/坍/坍.13008.wikitext
+++ b/en/坍/坍.13008.wikitext
@@ -15,25 +15,16 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han etym}}
+
 ===Pronunciation===
 {{zh-pron
 |m=tān
-|m-s=
-|dg=
 |c=taan1
-|c-t=
-|g=
-|h=pfs=
-|j=
-|mb=
-|md=
-|mn=
-|mn-t=
-|w=
-|x=
 |mc=y
 |oc=y
-|cat=n
+|cat=
 }}
 
 ===Definitions===
