t+nl:[[pruim]] ([[WT:EDIT|Assisted]]) <plum#50039368>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -313,7 +313,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 *: Mandarin: {{t+|cmn|李|sc=Hani}}
 * Czech: {{t+|cs|švestka|f}}, {{t|cs|slíva|f}}
 * Danish: {{t+|da|blomme}}, {{t+|da|blommetræ}}
-* Dutch: {{t+|nl|pruimenboom|m}}
+* Dutch: {{t+|nl|pruimenboom|m}}, {{t+|nl|pruim|m}}
 * Estonian: {{t|et|ploomipuu}}
 * Finnish: {{t+|fi|luumupuu}}
 * French: {{t+|fr|prunier|m}}
