--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -268,7 +268,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 # {{lb|en|intransitive}} To make a [[noise]] like thunder.
 #: {{ux|en|The train '''thundered''' along the tracks.}}
 # {{lb|en|intransitive}} To talk with a [[loud]], [[threatening]] voice.
-# {{lb|en|transitive}} To say (something) with a loud, threatening voice.
+# {{lb|en|transitive}} To say (something) with a loud, threatening, angry voice.
 #: {{ux|en|"Get back to work at once!", he '''thundered'''.}}
 # To produce something with incredible power
 #* {{quote-journal
