--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -91,3 +91,12 @@ Imitative; compare {{m|en|clink}}, {{m|en|clang}}.
 
 [[Category:English class 3 strong verbs]]
 [[Category:English irregular verbs]]
+
+----
+
+==Middle English==
+
+===Verb===
+{{head|enm|verb}}
+
+# {{alt form|lang=enm|clingen}}
