/* Translations */ Added Ancient Greek translation of this word. <play#50056234>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -138,7 +138,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * German: {{t+|de|spielen}}
 *: Alemannic German: {{t|gsw|schpile}}
 * Greek: {{t+|el|παίζω}}
-*: Ancient: {{t|grc|ἀθύρω}}
+*: Ancient: {{t|grc|παίζω}}, {{t|grc|ἀθύρω}}
 * Greenlandic: {{t|kl|pinnguarpoq}}
 * Hebrew: {{t+|he|שיחק|tr=sikhék|alt=שִׂחֵק / שיחק}}, {{t|he|השתעשע|tr=hishta'ashéa}}
 * Hindi: {{t+|hi|खेलना|sc=Deva}}
