t+ky:[[кийиз]] t+ro:[[pâslă]] ([[WT:EDIT|Assisted]]) <felt#50057247>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -61,14 +61,14 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 * Kazakh: {{t|kk|киіз}}
 * Khmer: {{t+|km|សំបុក}}
 * Korean: {{t|ko|펠트}}
-* Kyrgyz: {{t-needed|ky}}
+* Kyrgyz: {{t|ky|кийиз}}
 * Luxembourgish: {{t|lb|Filz|m}}
 * Mongolian: {{t+|mn|эсгий|sc=Cyrl}}
 * Nepali: {{t-needed|ne}}
 * Norwegian: {{t+|no|filt|m}}
 * Persian: {{t+|fa|نمد|tr=namad|sc=fa-Arab}}
 * Portuguese: {{t+|pt|feltro|m}}
-* Romanian: {{t-needed|ro}}
+* Romanian: {{t+|ro|pâslă|f}}
 * Russian: {{t+|ru|фетр|m}}, {{t+|ru|во́йлок|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|пуст|m}}, {{t|sh|филц|m}}
