--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -26,7 +26,7 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 
 ====Synonyms====
 * {{sense|worshipped image}} {{l|en|idol}}, {{l|en|graven image}} {{qualifier|pejorative}}
-* {{sense|exemplar}} ''See'' [[Thesaurus:exemplar]]
+* {{sense|exemplar}} ''See'' [[Thesaurus:exemplar]] ''and'' [[Thesaurus:model]]
 
 ====Derived terms====
 * {{l|en|aniconic}}, {{l|en|aniconism}}
