t+th:[[รัฐมนตรี]] t+th:[[เลขาธิการ]] ([[WT:EDIT|Assisted]]) <secretary#50059519>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -148,6 +148,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Swedish: {{t+|sv|minister|c}}
 * Tagalog: {{t|tl|kalihim}}
 * Telugu: {{t+|te|కార్యదర్శి}}
+* Thai: {{t+|th|รัฐมนตรี}}
 * Tok Pisin: {{t|tpi|sekreteri}}
 {{trans-bottom}}
 
@@ -166,6 +167,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|та̑јнӣк|m}}, {{t|sh|та̑јница|f}}
 *: Roman: {{t+|sh|tȃjnīk|m}}, {{t+|sh|tȃjnica|f}}
+* Thai: {{t|th|เลขาธิการ}}
 {{trans-bottom}}
 
 {{trans-top|type of desk}}
