--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -34,6 +34,9 @@ See {{m|en|find}}.
 
 # {{en-past of|find}}
 
+=====Synonyms=====
+* {{sense|past participle}} {{l|en|discovered}}; {{l|en|repertitious}} {{qualifier|by chance or upon advice, obs.}}
+
 =====Derived terms=====
 * {{l|en|found footage}}
 * {{l|en|lost and found}}
