/* Translations */ Added Ancient Greek translation of this word. <zenith#50087993>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -127,6 +127,8 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 * Finnish: {{t+|fi|huippu}}, {{t+|fi|huipennus}}, {{t|fi|huippukohta}}, {{t+|fi|kohokohta}}
 * French: {{t+|fr|zénith|m}}
 * German: {{t+|de|Zenit|m}}
+* Greek:
+*: Ancient Greek: {{t|grc|ἀκμή|f}}
 * Italian: {{t+|it|zenit|m}}, {{t+|it|culmine|m}}, {{t+|it|apice|m}}
 * Japanese: {{t+|ja|頂点|tr=ちょうてん, chōten}}, {{t+|ja|絶頂|tr=ぜっちょう, zecchō}}
 {{trans-mid}}
